// Vitest Snapshot v1

exports[`utilisateursQueryModify > Vérifie l'écriture de la requête sur un utilisateur 1`] = `
{
  "administration": {
    "activitesTypes": [],
    "id": "aut-97300-01",
  },
  "administrationId": "aut-97300-01",
  "dateCreation": "2022-05-12",
  "email": "utilisateurEmail",
  "entreprises": [],
  "id": "utilisateurId",
  "modification": true,
  "motDePasse": null,
  "nom": "utilisateurNom",
  "permissionModification": true,
  "preferences": null,
  "prenom": null,
  "qgisToken": null,
  "refreshToken": null,
  "role": "editeur",
  "suppression": true,
  "telephoneFixe": null,
  "telephoneMobile": null,
}
`;

exports[`utilisateursQueryModify > Vérifie l'écriture de la requête sur un utilisateur 2`] = `
{
  "administration": {
    "activitesTypes": [],
    "id": "aut-97300-01",
  },
  "administrationId": "aut-97300-01",
  "dateCreation": "2022-05-12",
  "email": "utilisateurEmail",
  "entreprises": [],
  "id": "utilisateurId",
  "modification": true,
  "motDePasse": null,
  "nom": "utilisateurNom",
  "permissionModification": true,
  "preferences": null,
  "prenom": null,
  "qgisToken": null,
  "refreshToken": null,
  "role": "editeur",
  "suppression": true,
  "telephoneFixe": null,
  "telephoneMobile": null,
}
`;

exports[`utilisateursQueryModify > Vérifie l'écriture de la requête sur un utilisateur 3`] = `
{
  "administration": {
    "activitesTypes": [],
    "id": "aut-97300-01",
  },
  "administrationId": "aut-97300-01",
  "dateCreation": "2022-05-12",
  "email": "utilisateurEmail",
  "entreprises": [],
  "id": "utilisateurId",
  "modification": false,
  "motDePasse": null,
  "nom": "utilisateurNom",
  "permissionModification": false,
  "preferences": null,
  "prenom": null,
  "qgisToken": null,
  "refreshToken": null,
  "role": "editeur",
  "suppression": false,
  "telephoneFixe": null,
  "telephoneMobile": null,
}
`;

exports[`utilisateursQueryModify > Vérifie l'écriture de la requête sur un utilisateur 4`] = `
{
  "administration": {
    "activitesTypes": [],
    "id": "aut-97300-01",
  },
  "administrationId": "aut-97300-01",
  "dateCreation": "2022-05-12",
  "email": "utilisateurEmail",
  "entreprises": [],
  "id": "utilisateurId",
  "modification": false,
  "motDePasse": null,
  "nom": "utilisateurNom",
  "permissionModification": false,
  "preferences": null,
  "prenom": null,
  "qgisToken": null,
  "refreshToken": null,
  "role": "editeur",
  "suppression": false,
  "telephoneFixe": null,
  "telephoneMobile": null,
}
`;

exports[`utilisateursQueryModify > Vérifie l'écriture de la requête sur un utilisateur 5`] = `
{
  "administration": {
    "activitesTypes": [],
    "id": "aut-97300-01",
  },
  "administrationId": "aut-97300-01",
  "dateCreation": "2022-05-12",
  "email": "utilisateurEmail",
  "entreprises": [],
  "id": "utilisateurId",
  "modification": false,
  "motDePasse": null,
  "nom": "utilisateurNom",
  "permissionModification": false,
  "preferences": null,
  "prenom": null,
  "qgisToken": null,
  "refreshToken": null,
  "role": "editeur",
  "suppression": false,
  "telephoneFixe": null,
  "telephoneMobile": null,
}
`;
